--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -68,3 +68,30 @@ p{
     	padding: 0 20px 30px;
 	}
 }
+
+.php {
+    clear:both;
+    font-size:1px;
+    height:1px;
+    line-height:1px;
+    margin:20px auto 40px;
+    padding:0 !important;
+    overflow:visible;
+    @include background-image(linear-gradient(left center,
+    	rgba(0, 0, 0, 0) 0%,
+    	rgba(0, 0, 0, 0.1) 15%,
+    	rgba(0, 0, 0, 0.1) 85%,
+    	rgba(0, 0, 0, 0) 100%)
+    );
+}
+.php:after {
+    background-image:url("../img/icon-elephant.png");
+    content:" ";
+    display:block;
+    height:28px;
+    left:50%;
+    margin:0 0 0 -20px;
+    position:absolute;
+    top:-10px;
+    width:40px;
+}
