--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -49,3 +49,12 @@
 .clearfix{
     clear: both;
 }
+
+//Responsive
+
+@include respond(mobile){
+    .c1, .c2, .c3, .c4, .c5, .c6, .c7, .c8, .c9, .c10, .c11, .c12 {
+        float:none;
+        margin:0px 0px 20px 0px;
+    }
+}
