--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -3,15 +3,25 @@
 	height:$HeaderHeight;
 	width:100%;
 
+	.logo{
+    	margin:0 20px 0 0;
+	    background-image: url("../img/logo.png");
+	    background-position:0 50%;
+	    background-repeat:no-repeat;
+	    display:block;
+	    height:$HeaderHeight;
+	    transition:opacity 0.2s ease 0s;
+	    width:163px;
+	    float:left;
+    }
+
+    .toggle-nav{
+		display:none;
+    }
+
 	.menu{
-		list-style: none outside none;
-	    margin: 0 -2px 0 0;
-	    padding: 0 10% 0 0;
-
-	    .logo{
-	    	margin:0 20px 0 0;
-	    }
-
+		list-style:none outside none;
+	    margin:0 -2px 0 0;
 		li{
 			display:inline-block;
 			padding:0;
@@ -26,6 +36,63 @@
 					color:$Blue;
 				}
 			}
+		}
+	}
+}
+
+//Responsive 
+
+@include respond(mobile){
+	.header{
+		height:auto;
+		.row{
+			padding:0 !important;		}
+
+		.logo{
+			float:none;
+			margin:auto;
+		}
+
+		.menu{
+			float:left;
+			width:100%;
+			background:$HeaderColour;
+			height:0;
+				@include transition(all 1s linear);
+
+			&.nav-open{
+				height:auto;
+			}
+
+			li{
+				display:block;
+				border-bottom:1px solid lighten($HeaderColour, 15%);
+				padding:0 20px;
+				margin:0;
+
+				&:last-child{
+					border-bottom:none;
+				}
+
+				a{
+					display:block;
+					line-height:40px;
+				}
+			}
+		}
+		.toggle-nav{
+		    background-image:url("../img/icon-nav.png");
+		    background-position:15px 50%;
+		    background-repeat:no-repeat;
+		    cursor:pointer;
+		    display:block;
+		    height:60px;
+		    left:0;
+		    opacity:0.5;
+		    position:absolute;
+		    text-indent:-9999px;
+		    top:0;
+		    width:48px;
 		}
 	}
 }
