--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,7 +5,7 @@
 
 	.logo{
     	margin:0 20px 0 0;
-	    background-image: url("../img/logo.png");
+	    background-image: url("../img/logo.png?1");
 	    background-position:0 50%;
 	    background-repeat:no-repeat;
 	    display:block;
