--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -94,7 +94,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /* line 6, ../sass/_header.scss */
 .header .logo {
   margin: 0 20px 0 0;
-  background-image: url("../img/logo.png");
+  background-image: url("../img/logo.png?1");
   background-position: 0 50%;
   background-repeat: no-repeat;
   display: block;
