--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,7 +4,7 @@
 	width:100%;
 
 	.logo{
-    	margin:0 20px 0 0;
+    	margin:0 30px 0 0;
 	    background-image: url("../img/logo.png?1");
 	    background-position:0 50%;
 	    background-repeat:no-repeat;
@@ -28,12 +28,13 @@
     		margin:0 10px 0 0;
 
 			a{
-				color:lighten($HeaderColour, 15%);
+				color:lighten($HeaderColour, 40%);
 				font-size:1.5em;
 				line-height:$HeaderHeight;
+					@include transition(color ease-in-out 0.2s);
 
 				&:hover{
-					color:$Blue;
+					color:$Orange;
 				}
 			}
 		}
@@ -45,8 +46,10 @@
 @include respond(mobile){
 	.header{
 		height:auto;
+		
 		.row{
-			padding:0 !important;		}
+			padding:0 !important;		
+		}
 
 		.logo{
 			float:none;
