--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -93,7 +93,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 /* line 6, ../sass/_header.scss */
 .header .logo {
-  margin: 0 20px 0 0;
+  margin: 0 30px 0 0;
   background-image: url("../img/logo.png?1");
   background-position: 0 50%;
   background-repeat: no-repeat;
@@ -120,30 +120,35 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 /* line 30, ../sass/_header.scss */
 .header .menu li a {
-  color: #4a5c66;
+  color: #889ca8;
   font-size: 1.5em;
   line-height: 60px;
+  -webkit-transition: color ease-in-out;
+  -webkit-transition-delay: 0.2s;
+  -moz-transition: color ease-in-out 0.2s;
+  -o-transition: color ease-in-out 0.2s;
+  transition: color ease-in-out 0.2s;
 }
-/* line 35, ../sass/_header.scss */
+/* line 36, ../sass/_header.scss */
 .header .menu li a:hover {
-  color: #4a91a3;
+  color: #da9e26;
 }
 
 @media (max-width: 599px) {
-  /* line 46, ../sass/_header.scss */
+  /* line 47, ../sass/_header.scss */
   .header {
     height: auto;
   }
-  /* line 48, ../sass/_header.scss */
+  /* line 50, ../sass/_header.scss */
   .header .row {
     padding: 0 !important;
   }
-  /* line 51, ../sass/_header.scss */
+  /* line 54, ../sass/_header.scss */
   .header .logo {
     float: none;
     margin: auto;
   }
-  /* line 56, ../sass/_header.scss */
+  /* line 59, ../sass/_header.scss */
   .header .menu {
     float: left;
     width: 100%;
@@ -154,27 +159,27 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     -o-transition: all 1s linear;
     transition: all 1s linear;
   }
-  /* line 63, ../sass/_header.scss */
+  /* line 66, ../sass/_header.scss */
   .header .menu.nav-open {
     height: auto;
   }
-  /* line 67, ../sass/_header.scss */
+  /* line 70, ../sass/_header.scss */
   .header .menu li {
     display: block;
     border-bottom: 1px solid #4a5c66;
     padding: 0 20px;
     margin: 0;
   }
-  /* line 73, ../sass/_header.scss */
+  /* line 76, ../sass/_header.scss */
   .header .menu li:last-child {
     border-bottom: none;
   }
-  /* line 77, ../sass/_header.scss */
+  /* line 80, ../sass/_header.scss */
   .header .menu li a {
     display: block;
     line-height: 40px;
   }
-  /* line 83, ../sass/_header.scss */
+  /* line 86, ../sass/_header.scss */
   .header .toggle-nav {
     background-image: url("../img/icon-nav.png");
     background-position: 15px 50%;
