--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -44,12 +44,17 @@ p{
     font:300 1.5em/1.625 "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
+iframe {
+    display:block;
+    margin:auto;
+}
+
 .row{
     overflow:hidden;
     padding:0 20px;
     position:relative;
     margin:0 auto;
-    max-width:1000px;
+    max-width:1640px;
     min-width:0;
     width:100%;
 
