--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -281,10 +281,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   clear: both;
 }
 
-@media (max-width: 599px) {
+@media (max-width: 980px) {
   /* line 56, ../sass/_grid.scss */
   .c1, .c2, .c3, .c4, .c5, .c6, .c7, .c8, .c9, .c10, .c11, .c12 {
-    float: none;
+    width: 100%;
     margin: 0px 0px 20px 0px;
   }
 }
@@ -329,16 +329,22 @@ p {
 }
 
 /* line 47, ../sass/screen.scss */
+iframe {
+  display: block;
+  margin: auto;
+}
+
+/* line 52, ../sass/screen.scss */
 .row {
   overflow: hidden;
   padding: 0 20px;
   position: relative;
   margin: 0 auto;
-  max-width: 1000px;
+  max-width: 1640px;
   min-width: 0;
   width: 100%;
 }
-/* line 57, ../sass/screen.scss */
+/* line 62, ../sass/screen.scss */
 .row:before,
 .row :after {
   content: " ";
@@ -346,16 +352,16 @@ p {
   clear: both;
 }
 
-/* line 64, ../sass/screen.scss */
+/* line 69, ../sass/screen.scss */
 .main {
   padding: 60px 0 0;
 }
-/* line 67, ../sass/screen.scss */
+/* line 72, ../sass/screen.scss */
 .main .row {
   padding: 0 20px 30px;
 }
 
-/* line 72, ../sass/screen.scss */
+/* line 77, ../sass/screen.scss */
 .php {
   clear: both;
   font-size: 1px;
@@ -371,7 +377,7 @@ p {
   background-image: linear-gradient(left center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 15%, rgba(0, 0, 0, 0.1) 85%, rgba(0, 0, 0, 0) 100%);
 }
 
-/* line 88, ../sass/screen.scss */
+/* line 93, ../sass/screen.scss */
 .php:after {
   background-image: url("../img/icon-elephant.png");
   content: " ";
@@ -384,7 +390,7 @@ p {
   width: 40px;
 }
 
-/* line 100, ../sass/screen.scss */
+/* line 105, ../sass/screen.scss */
 .chart {
   margin: auto;
 }
