--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -52,7 +52,7 @@
 
 //Responsive
 
-@include respond(tablet){
+@include respond(mobile){
     .c1, .c2, .c3, .c4, .c5, .c6, .c7, .c8, .c9, .c10, .c11, .c12 {
         width:100%;
         margin:0px 0px 20px 0px;
