Removed gap for stats

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -394,3 +394,9 @@ iframe {
 .chart {
   margin: auto;
 }
+
+/* line 108, ../sass/screen.scss */
+.stats > ul > li {
+  display: inline-block;
+  margin-right: 10px;
+}
