--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -323,18 +323,27 @@ h2 {
 }
 
 /* line 42, ../sass/screen.scss */
+h3 {
+  color: #da9e26;
+  font-family: "SteelfishRgRegular",Helvetica,Arial,sans-serif;
+  font-size: 2em;
+  line-height: 1.4em;
+}
+
+/* line 49, ../sass/screen.scss */
 p {
   color: #373737;
   font: 300 1.5em/1.625 "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-/* line 47, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 iframe {
   display: block;
   max-width: 100%;
+  border: 1px solid #dedede;
 }
 
-/* line 52, ../sass/screen.scss */
+/* line 60, ../sass/screen.scss */
 .row {
   overflow: hidden;
   padding: 0 20px;
@@ -344,7 +353,7 @@ iframe {
   min-width: 0;
   width: 100%;
 }
-/* line 62, ../sass/screen.scss */
+/* line 70, ../sass/screen.scss */
 > .row:before,
 .row :after {
   content: " ";
@@ -352,16 +361,16 @@ iframe {
   clear: both;
 }
 
-/* line 69, ../sass/screen.scss */
+/* line 77, ../sass/screen.scss */
 .main {
   padding: 60px 0 0;
 }
-/* line 72, ../sass/screen.scss */
+/* line 80, ../sass/screen.scss */
 .main .row {
   padding: 0 20px 30px;
 }
 
-/* line 77, ../sass/screen.scss */
+/* line 85, ../sass/screen.scss */
 .php {
   clear: both;
   font-size: 1px;
@@ -377,7 +386,7 @@ iframe {
   background-image: linear-gradient(left center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 15%, rgba(0, 0, 0, 0.1) 85%, rgba(0, 0, 0, 0) 100%);
 }
 
-/* line 93, ../sass/screen.scss */
+/* line 101, ../sass/screen.scss */
 .php:after {
   background-image: url("../img/icon-elephant.png");
   content: " ";
@@ -390,12 +399,12 @@ iframe {
   width: 40px;
 }
 
-/* line 105, ../sass/screen.scss */
+/* line 113, ../sass/screen.scss */
 .chart {
   margin: auto;
 }
 
-/* line 108, ../sass/screen.scss */
+/* line 116, ../sass/screen.scss */
 .stats > ul > li {
   display: inline-block;
   margin-right: 30px;
